--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">PharmaMax from github</a>
+  <a class="navbar-brand" href="/">PharmaMax</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
