--- a/flaskr/static/css/styles.css
+++ b/flaskr/static/css/styles.css
@@ -11,15 +11,15 @@
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { width: 100%; height:100%; overflow:hidden; }
-
+html { width: 100%; height:100%; overflow-y: scroll; }
 
 body {
+	position: absolute; 
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
 	background: #092756;
-	background: linear-gradient(135deg,  #7194cc 0%,#092756 100%);	
+	background: linear-gradient(to right,  #7194cc 0%,#092756 100%);	
 }
 
 .container {
@@ -46,11 +46,30 @@ body {
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
     text-align: center;
-	color:#333
+	color:#e6e6e6
+}
+a:hover {
+    text-decoration: none;
+    
 }
 
+.newstitle{
+	text-transform: uppercase;
+    text-decoration: none;
+    text-align: left;
+	font-size: 1.5rem;
+	color:#e6e6e6;
+}
+.newstitle a:hover{
+    text-decoration: underline;
+	color:#e6e6e6;
+}
+
+.newstext {
+	text-align: left;
+}
 
 .box { 
 	position: absolute;
@@ -66,7 +85,9 @@ h1 {
 	text-shadow: 0 0 10px rgba(0,0,0,0.3); 
 	letter-spacing:1px; text-align:center; 
 }
-
+h2 {
+	text-align:left;
+}
 p {
     color: #fff;
     text-align: center;
@@ -148,3 +169,17 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 /* .dropdown:hover .dropbtn {background-color: #00000046; } */
+
+.subheading {
+	font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	text-transform: uppercase;
+	text-align: left;
+	font-weight: 300;
+	font-size: 1rem;
+  }
+
+.flex-shrink-0 {
+  flex-shrink: 0 !important;
+  text-align: right;
+}
+
