--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -18,10 +18,11 @@
   <a class="navbar-brand" href="/">PharmaMax</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
-      </li>
+      
         {% if not logged_in %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+        </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
       </li>
@@ -29,6 +30,9 @@
         <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
       </li>
         {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.workplace') }}">Workplace</a>
       </li>
