--- a/flaskr/templates/reset_request.html
+++ b/flaskr/templates/reset_request.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+
 {% block content %}
 <div class="box1">
-    <h1>Login</h1>
+    <h1>Reset Password</h1>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         {% for message in messages %}
@@ -9,6 +10,8 @@
         {% endfor %}
       {% endif %}
     {% endwith %}
+
+
     <form method="post">
         {{ form.hidden_tag() }}
          {% if form.email.errors %}
@@ -22,31 +25,12 @@
                     {% else %}
                         {{ form.email() }}
                     {% endif %}
-
-
-
-                     {% if form.password.errors %}
-                        
-                        <div class="text-danger">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                            {{ form.password() }}
-                        </div>
-                    {% else %}
-                        {{ form.password() }}
-                    {% endif %}
        
-        <div >
-                
-                <div class="form-group">
+            
+            <div class="form-group">
                 {{ form.submit(class="btn btn-primary btn-block btn-large") }}
-                <small class="text-muted ml-2">
-                    <a href="{{ url_for('auth.reset_request') }}">Forgot Password?</a>
-                </small>
-                </div>
-        </div>
-    </form>
+            
+            </div>
+     </form>
 </div>
-
-{% endblock %}
+{% endblock content %}
