--- a/flaskr/templates/workplace.html
+++ b/flaskr/templates/workplace.html
@@ -10,6 +10,9 @@
             {% endif %}
           {% endwith %}
 <div class="container">
+  <img src="static/img/logo.png" alt="PharmaMax" width="100" height="100">
+  <br>
+  <br>
   <h1 class="title">Welcome {{current_user.firstname}}!</h1>
 
  <br>
