--- a/flaskr/static/css/styles.css
+++ b/flaskr/static/css/styles.css
@@ -44,13 +44,7 @@ body {
 	border: 1px solid rgba(0,0,0,0.3);
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-.img3{
-	position: relative;
-	margin-right: 150px;
-	margin-top: 450px;
-	/* opacity: 0.8; */
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
+
 
 a {
 	text-decoration: none;
@@ -76,6 +70,9 @@ a:hover {
 
 .newstext {
 	text-align: left;
+}
+.projectlist {
+	text-align: center;
 }
 
 .box { 
@@ -157,6 +154,10 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   border: 1px solid rgba(0,0,0,0.3);
   border-radius: 4px;
 }
+
+.dropbtn:hover, .dropbtn a {
+	color: #fff; 
+  }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
