--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -13,13 +13,33 @@
 
 <div class="container">
   <div>
+    <img src="static/img/logo.png" alt="PharmaMax" width="100" height="100" class="rounded mx-auto d-block">
+  <br>
+  <br>
   <h1 class="title">Welcome {{current_user.firstname}}!</h1>
   </div>
   <br>
   <section>
     <div class="main">
-        <h2>Latest Projects</h2>
-        
+        <h2>Latest Projects in {{ department_id}}</h2>
+        <br>
+        {% if buckets %}
+        {% for bucket in buckets %}
+      <div>
+          <div>
+              <p class="newstext">{{ bucket }} </p>  
+          </div>
+      </div>
+      {% endfor %}
+      {% else %}
+      <div>
+        <div>
+            <p class="newstext">Currently there are no Projects in {{ department_id}} </p>  
+        </div>
+    </div>
+      {% endif %}
+      <br>
+      <hr>
     </div> 
   </section>
 
@@ -47,13 +67,13 @@
 
 <div class="col-md-4 sidenav">
   <div class="sidebar">
-    <h3>Our Sidebar</h3>
-    <p class='text-muted'>You can put any information here you'd like.
+    <h3>Notice board</h3>
+    <p class='text-muted'>Information for employees.
       <ul class="list-group">
         <li class="list-group-item list-group-item-light">Projects</li>
         <li class="list-group-item list-group-item-light">Announcements</li>
         <li class="list-group-item list-group-item-light">Calendar</li>
-        <li class="list-group-item list-group-item-light">etc</li>
+        <li class="list-group-item list-group-item-light">Partners</li>
       </ul>
     </p>
   </div>
