--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -2,7 +2,16 @@
 {% block content %}
 
 <div class="box1">
-	<h1>PharmaMax</h1>
+	
+  <div>
+    <img src="static/img/logo.png" alt="PharmaMax" width="100" height="100" class="rounded mx-auto d-block">
+  
+  </div>
+  <br>
+  <h1 class="title">Welcome!</h1>
+ 
+  <p>We research, develop, market and distribute drugs!</p>
+  
 
   <a href="{{ url_for('auth.login') }}" class="btn btn-primary btn-block btn-large">Login</a>
   <a href="{{ url_for('auth.register') }}" class="btn btn-secondary btn-block btn-large">Register</a>
