--- a/flaskr/templates/report.html
+++ b/flaskr/templates/report.html
@@ -14,16 +14,14 @@
 <div class="container">
 
 <form method="POST" action="" class="box" enctype="multipart/form-data">
-<h1 class="title">All Project Files</h1>
+<h1 class="title">Project Files</h1>
 {{ form.hidden_tag() }}
   <div>{{ form.project_folder_name.label }}: {{ form.project_folder_name(class="dropbtn") }}</div>
 
    <br>
     
 <div >{{ form.submit(class="btn btn-primary btn-block btn-large") }}
-            </div>
-
-</form>
+            </div</form>
 
 
 </div>
